# et-money-mentor

./: README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/agents/: __init__.py  couple_agent.py  guardrail_agent.py  intake_agent.py  knowledge.py  life_event_agent.py  mentor_agent.py  mf_xray_agent.py
backend/core/: __init__.py  config.py  dependencies.py  email.py  exceptions.py  llm_client.py  security.py  voice.py
backend/db/: __init__.py  session_store.py
backend/docs/: about.md
backend/finance/: __init__.py  amfi.py  fire.py  health.py  mf_xray.py  tax.py
backend/models/: schemas.py
backend/routers/: auth.py  chat.py  couple_planner.py  fire_planner.py  health_score.py  life_event.py  mf_xray.py  tax_wizard.py  voice.py
backend/tests/: conftest.py  test_finance.py  test_mf_xray.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/: theme.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/signin/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/auth/: animated-signin.tsx  animated-signup.tsx  email-verification-modal.tsx
frontend/src/components/chat/: chat-input-bar.tsx  chat-page.tsx  message-bubble.tsx  (+4 more)
frontend/src/lib/: api.ts  auth.ts  chat.ts  finance.ts  fire-types.ts  life-event-types.ts  portfolio.ts  tax-slabs.ts  tax-types.ts  validation.ts  voice.ts
(+86 files in other folders)
